--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ dj-database-url = "*"
 psycopg2 = "*"
 django-cors-headers = "*"
 whitenoise = "*"
+django-markdownx = "==4.0.0b1"
 
 [dev-packages]
 
